# btc_signing_device_demo

./: .gitignore  README.md  mnem_gen_md.7z  pyproject.toml
docs/: NOTES.txt  URs_Standard
src/: bip39.py  data_from_mnemonic.py  decode_psbt_qr.py  decode_qr_img.py  decode_temporal_qr_imgs.py  embit_generates_bip39_recovery_phrase.py  helpers.7z  hex_bin_dec.py  make_qr_png.py  mnemonic_generator.py  models.7z  urtypes.7z  xpub2ur_standard.py
